# LostInTranslation

./: Backup  LostInTranslation.py  main.py  pyproject.toml
static/css/: main.css
templates/: about.html  home.html  layout.html
